--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mighty -portfolio official</title>
+  <title>Mighty -portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
             </div>
             <h1>Frontend Developer</h1>
             <p>Crafting beautiful, responsive web experiences with modern technologies</p>
-            <a href="#contact" class="hire-btn">Hire Me</a>
+            <a href="#contact" class="hire-btn">Hire Me Now</a>
         </div>
     </section>
 
