--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="about">
             <div class="about-content">
                 <div class="about-image">
-                    <div style="width: 100%; height: 100%; border-radius: 16px; background-image:url('profile picture.jpg'); background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; color: #9ca3af; font-size: 4rem;">
+                    <div style="width: 100%; height: 100%; border-radius: 16px; background-image:url('images/profile picture.jpg'); background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; color: #9ca3af; font-size: 4rem;">
                         <i class="fas fa-user"></i>
                     </div>
                 </div>
