--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <div class="contact-content">
             <p>I'm always interested in hearing about new opportunities and exciting projects. Let's connect and discuss how we can work together!</p>
             <div class="contact-links">
-                <a href="https://twitter.com/" class="contact-link" target="_blank">
-                    <i class="fab fa-twitter"></i>
+                <a href="https://x.com/Real_Mighty__
+                " class="contact-link" target="_blank" style="background-image: url('images/twitter.png'); background-size: cover; background-position: center;background-color: white;">
                 </a>
-                <a href="https://linkedin.com/" class="contact-link" target="_blank">
+                <a href="https://www.linkedin.com/in/oyeleye-victor-oyebode-a3273a1b1" class="contact-link" target="_blank" style="background-image: url('images/linkedin.png'); background-size: cover; background-position: center;">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="mailto:your.email@gmail.com" class="contact-link">
+                <a href="mailto:realofficialvictor@gmail.com" class="contact-link" style="background-image: url('images/gmail.png'); background-size: cover; background-position: center;">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
