--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="projects-grid">
             <div class="project-card fade-in">
                 <h3>Portfilo Website</h3>
+                <div style="background-image: url('images/web\ project.png');   height: 500px;"></div>div>
                 <p>A well-crafted portfolio website for a front end developer with smooth animations and cool interface</p>
                 <div class="project-tech">
                     <span class="tech-tag">ES16</span>
@@ -72,7 +73,7 @@
                     <span class="tech-tag">HTML5</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link">
+                    <a href="https://github.com/Mighty97/Mighty-Portfolio.git" class="project-link">
                         <i class="fab fa-github"></i> Code
                     </a>
                     <a href="#" class="project-link">
@@ -103,7 +104,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; &lt; /Mighty &gt;</p>
+       <a href="https://mighty97.github.io/Mighty-Portfolio/" style="text-decoration: none; color: rgba(96, 165, 250, 0.2);"><p>&copy; &lt; /Mighty &gt;</p></a> 
     </footer>
 <script src="script.js"></script>
 </body>
