--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="projects-grid">
             <div class="project-card fade-in">
                 <h3>Portfilo Website</h3>
-                <div style="background-image: url('images/web\ project.png');   height: 500px;"></div>div>
+                <div style="background-image: url('images/web\ project.png');   background-position:center; background-size: cover; height: 300px;"></div>div>
                 <p>A well-crafted portfolio website for a front end developer with smooth animations and cool interface</p>
                 <div class="project-tech">
                     <span class="tech-tag">ES16</span>
