--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mighty -portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/profile picture.jpg">
 </head>
 <body>
    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#home" class="logo">&lt;/Mighty&gt;</a>
+            <a href="#home" class="logo">&lt; Mighty /&gt;</a>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -28,7 +29,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-image">
-                <div style="width: 100%; height: 100%; border-radius: 50%; background-image:url('images/profile picture.jpg'); background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; color: #9ca3af; font-size: 3rem;">
+                <div style="width: 100%; height: 100%; border-radius: 50%; background-image:url('images/image\ 1.jpg'); background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; color: #9ca3af; font-size: 3rem;">
                     <i class="fas fa-user"></i>
                 </div>
             </div>
@@ -65,10 +66,10 @@
         <div class="projects-grid">
             <div class="project-card fade-in">
                 <h3>Portfilo Website</h3>
-                <div style="background-image: url('images/web\ project.png');   background-position:center; background-size: cover; height: 300px;"></div>div>
+                <div style="background-image: url('images/web\ project.png');   background-position:center; background-size: cover; height: 300px;"></div>
                 <p>A well-crafted portfolio website for a front end developer with smooth animations and cool interface</p>
                 <div class="project-tech">
-                    <span class="tech-tag">ES16</span>
+                    <span class="tech-tag">JavaScript</span>
                     <span class="tech-tag">CSS3</span>
                     <span class="tech-tag">HTML5</span>
                 </div>
@@ -76,7 +77,7 @@
                     <a href="https://github.com/Mighty97/Mighty-Portfolio.git" class="project-link">
                         <i class="fab fa-github"></i> Code
                     </a>
-                    <a href="#" class="project-link">
+                    <a href="https://mighty97.github.io/Mighty-Portfolio/" class="project-link">
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
                 </div>
@@ -92,7 +93,7 @@
                 <a href="https://x.com/Real_Mighty__
                 " class="contact-link" target="_blank" style="background-image: url('images/twitter.png'); background-size: cover; background-position: center;background-color: white;">
                 </a>
-                <a href="https://www.linkedin.com/in/oyeleye-victor-oyebode-a3273a1b1" class="contact-link" target="_blank" style="background-image: url('images/linkedin.png'); background-size: cover; background-position: center;">
+                <a href="https://www.linkedin.com/in/victor-oyebode" class="contact-link" target="_blank" style="background-image: url('images/linkedin.png'); background-size: cover; background-position: center;">
                     <i class="fab fa-linkedin"></i>
                 </a>
                 <a href="mailto:realofficialvictor@gmail.com" class="contact-link" style="background-image: url('images/gmail.png'); background-size: cover; background-position: center;">
@@ -104,7 +105,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-       <a href="https://mighty97.github.io/Mighty-Portfolio/" style="text-decoration: none; color: rgba(96, 165, 250, 0.2);"><p>&copy; &lt; /Mighty &gt;</p></a> 
+       <a href="https://mighty97.github.io/Mighty-Portfolio/" style="text-decoration: none; color:#60a5fa;"><p>&copy; &lt; Mighty  /&gt;</p></a> 
     </footer>
 <script src="script.js"></script>
 </body>
