--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <h1>Frontend Developer</h1>
             <p>Crafting beautiful, responsive web experiences with modern technologies</p>
-            <a href="#contact" class="hire-btn">Hire Me</a>
+            <a href="#contact" class="hire-btn"> Hire Me </a>
         </div>
     </section>
 
@@ -65,6 +65,24 @@
         <h2 class="section-title">Featured Projects</h2>
         <div class="projects-grid">
             <div class="project-card fade-in">
+                <h3>Recipe Library</h3>
+                <div style="background-image: url('images/recipe library.png');   background-position:center; background-size: cover; height: 300px;"></div>
+                <p>A recipe finder app with ingredients and insturction plus estimated cooking time and number per serving</p>
+                <div class="project-tech">
+                    <span class="tech-tag">ES6+</span>
+                    <span class="tech-tag">CSS3</span>
+                    <span class="tech-tag">HTML5</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://github.com/Mighty97/recipe-library.git" class="project-link">
+                        <i class="fab fa-github"></i> Code
+                    </a>
+                    <a href="https://recipe-library-murex.vercel.app/" class="project-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                </div>
+                </div>
+                <div class="project-card fade-in">
                 <h3>Portfilo Website</h3>
                 <div style="background-image: url('images/web\ project.png');   background-position:center; background-size: cover; height: 300px;"></div>
                 <p>A well-crafted portfolio website for a front end developer with smooth animations and cool interface</p>
