Fix HTML structure and update project details

--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
     <section id="projects" class="section">
         <h2 class="section-title">Featured Projects</h2>
         <div class="projects-grid">
+          <div class="project-card fade-in">
+                <h3>Seed of Grace International College</h3>
+                <div style="background-image: url('images/recipe library.png');   background-position:center; background-size: cover; height: 300px;"></div>
+                <p>A college website with sleek design and amazing animations</p>
+                <div class="project-tech">
+                    <span class="tech-tag">React.js</span>
+                    <span class="tech-tag">vite</span>
+                    <span class="tech-tag">npm</span>
+                    <span class="tech-tag">css</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://github.com/Mighty97/Mighty-Portfolio.git" class="project-link">
+                        <i class="fab fa-github"></i> Code
+                    </a>
+                    <a href="https://seed-of-grace-intl-college-8pnj-9p3k5s4k7.vercel.app/" class="project-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                </div>
+                </div>
             <div class="project-card fade-in">
                 <h3>Recipe Library</h3>
                 <div style="background-image: url('images/recipe library.png');   background-position:center; background-size: cover; height: 300px;"></div>
@@ -127,4 +146,5 @@
     </footer>
 <script src="script.js"></script>
 </body>
+
 </html>
