Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="projects-grid">
           <div class="project-card fade-in">
                 <h3>Seed of Grace International College</h3>
-                <div style="background-image: url('images/recipe library.png');   background-position:center; background-size: cover; height: 300px;"></div>
+                <div style="background-image: url('images/sgic.jpg');   background-position:center; background-size: cover; height: 300px;"></div>
                 <p>A college website with sleek design and amazing animations</p>
                 <div class="project-tech">
                     <span class="tech-tag">React.js</span>
@@ -148,3 +148,4 @@
 </body>
 
 </html>
+
